@@ -265,6 +265,7 @@ Fixes:
    * Entry: Change the keyboard mode only if the imf is not available. If the
    imf is available, the keyboard mode should be decided by ime, but not entry.
    This prevents the asynchronous states between ime and conformant.
+   * Flip : Fix the flip page to not flip on a direction if the direction is disabled.
 
 Removals:
 
